--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,16 @@
 Package: spbabel
 Type: Package
 Title: Convert Data Between Spatial and Other
-Version: 0.3.0.9001
-Authors@R: c(person("Michael D.","Sumner", role = c("aut", "cre"), email = "mdsumner@gmail.com"), 
-             person("Joscha", "Legewie", role = "ctb"))
-Description: Functions to convert from Spatial*DataFrame classes and other forms. The table form follows the output of the `geom` function from the `raster` package.
+Version: 0.3.1
+Authors@R: c(person("Michael D.","Sumner", role = c("aut", "cre"), email = "mdsumner@gmail.com"))
+Description: Functions to convert from Spatial*DataFrame classes to long form and vice versa. 
 License: GPL-3
 LazyData: TRUE
 Depends:
     R (>= 3.2.3),
     dplyr,
     sp
-Imports: ggplot2, lazyeval, tidyr
+Imports: ggplot2
 RoxygenNote: 5.0.1
 Suggests: testthat,
     knitr,
