--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: spbabel
 Type: Package
 Title: Convert Data Between Spatial and Other
-Version: 0.3.1.9001
+Version: 0.3.1.9002
 Authors@R: c(person("Michael D.","Sumner", role = c("aut", "cre"), email = "mdsumner@gmail.com"))
-Description: Functions to convert from Spatial*DataFrame classes to long form and vice versa. 
+Description: Functions to convert from `Spatial*DataFrame` classes to long form and vice versa. 
 License: GPL-3
 LazyData: TRUE
 Depends:
