--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,9 +17,12 @@ importFrom(dplyr,bind_rows)
 importFrom(dplyr,data_frame)
 importFrom(dplyr,distinct_)
 importFrom(dplyr,group_by)
+importFrom(dplyr,left_join)
 importFrom(dplyr,tbl_df)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,ggplot)
+importFrom(methods,.hasSlot)
+importFrom(methods,show)
 importFrom(sp,CRS)
 importFrom(sp,Line)
 importFrom(sp,Lines)
