--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Type: Package
 Title: Convert Spatial Data Using Tidy Tables
 Version: 0.3.2
 Authors@R: c(person("Michael D.","Sumner", role = c("aut", "cre"), email = "mdsumner@gmail.com"))
-Description: Functions to convert from `Spatial*DataFrame` classes to long form and vice versa. 
+Description: Functions to convert from `Spatial` classes to long table form, and from long table form to `Spatial`. 
 License: GPL-3
 LazyData: TRUE
 Depends:
@@ -11,9 +11,7 @@ Depends:
 Imports: dplyr, ggplot2, methods, sp
 RoxygenNote: 5.0.1
 Suggests: testthat,
-    knitr,
     maptools,
     raster,
     rmarkdown, 
     scales
-VignetteBuilder: knitr
