--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,13 +8,15 @@ URL: https://github.com/mdsumner/spbabel
 BugReports: https://github.com/mdsumner/spbabel/issues
 Depends:
     R (>= 3.2.3)
-Imports: dplyr, ggplot2, methods, sp
+Imports: dplyr, ggplot2, methods, sp, tibble
 Suggests: testthat,
     maptools,
     raster,
     rmarkdown, 
     scales,
-    knitr
+    knitr,
+    covr, 
+    broom
 VignetteBuilder: knitr
 LazyData: yes
 License: GPL-3
