--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,10 +11,8 @@ export(sptable)
 exportMethods(print)
 exportMethods(show)
 importFrom(dplyr,"%>%")
-importFrom(dplyr,as_data_frame)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
-importFrom(dplyr,data_frame)
 importFrom(dplyr,distinct_)
 importFrom(dplyr,group_by)
 importFrom(dplyr,left_join)
@@ -40,3 +38,5 @@ importFrom(sp,bbox)
 importFrom(sp,coordinates)
 importFrom(sp,geometry)
 importFrom(sp,proj4string)
+importFrom(tibble,as_tibble)
+importFrom(tibble,tibble)
