--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ S3method(sptable,SpatialPolygonsDataFrame)
 export("sptable<-")
 export(mtable)
 export(p1table)
+export(semi_cascade)
 export(sp)
 export(sp_p1)
 export(sptable)
