--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,21 @@
 Package: spbabel
 Type: Package
-Version: 0.3.2.9001
+Version: 0.4.0
 Title: Convert Spatial Data Using Tidy Tables
-Description: Functions to convert from `Spatial` classes to long table form, and from long table form to `Spatial`. 
+Description: Tools to convert from specific formats to more general forms of 
+    spatial data. Using tables to store the actual entities present in spatial
+    data provides far greater flexibility, and the functions here deliberately 
+    minimize the level of interpretation applied, leaving that for specific 
+    applications. Includes round-trip for 'Spatial' classes and long-form 
+    tables, analogous to 'ggplot2::fortify'. 
 Authors@R: c(person("Michael D.","Sumner", role = c("aut", "cre"), email = "mdsumner@gmail.com"))
 URL: https://github.com/mdsumner/spbabel
 BugReports: https://github.com/mdsumner/spbabel/issues
 Depends:
     R (>= 3.2.3)
-Imports: dplyr, ggplot2, methods, sp, tibble
+Imports: dplyr, methods, sp, tibble
 Suggests: testthat,
+    ggplot2,
     maptools,
     raster,
     rmarkdown, 
