tail from utils

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,3 +45,4 @@ importFrom(sp,proj4string)
 importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
 importFrom(utils,head)
+importFrom(utils,tail)
