--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method(map_table,Spatial)
 S3method(map_table,trip)
 S3method(sp,data.frame)
+S3method(sp,map)
 S3method(sptable,SpatialLinesDataFrame)
 S3method(sptable,SpatialMultiPointsDataFrame)
 S3method(sptable,SpatialPointsDataFrame)
