--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,10 +3,10 @@
 S3method(map_table,Spatial)
 S3method(map_table,trip)
 S3method(sp,data.frame)
-S3method(sptable,SpatialLinesDataFrame)
+S3method(sptable,SpatialLines)
 S3method(sptable,SpatialMultiPointsDataFrame)
 S3method(sptable,SpatialPointsDataFrame)
-S3method(sptable,SpatialPolygonsDataFrame)
+S3method(sptable,SpatialPolygons)
 export("sptable<-")
 export(map_table)
 export(sp)
