--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,7 @@ importFrom(sp,bbox)
 importFrom(sp,coordinates)
 importFrom(sp,geometry)
 importFrom(sp,proj4string)
+importFrom(stats,setNames)
 importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
 importFrom(utils,head)
