start of always generating 1D primitives

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method(map_table,Spatial)
 S3method(map_table,trip)
+S3method(primitives,Spatial)
 S3method(sp,data.frame)
 S3method(sptable,SpatialLines)
 S3method(sptable,SpatialMultiPointsDataFrame)
@@ -9,6 +10,7 @@ S3method(sptable,SpatialPointsDataFrame)
 S3method(sptable,SpatialPolygons)
 export("sptable<-")
 export(map_table)
+export(primitives)
 export(sp)
 export(sptable)
 exportMethods(print)
@@ -22,6 +24,7 @@ importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,select)
 importFrom(dplyr,select_)
+importFrom(dplyr,semi_join)
 importFrom(dplyr,tbl_df)
 importFrom(methods,.hasSlot)
 importFrom(methods,show)
