--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ S3method(sptable,SpatialLines)
 S3method(sptable,SpatialMultiPointsDataFrame)
 S3method(sptable,SpatialPointsDataFrame)
 S3method(sptable,SpatialPolygons)
+S3method(sptable,sf)
 export("sptable<-")
 export(map_table)
 export(sp)
