--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ importFrom(dplyr,select_)
 importFrom(dplyr,tbl_df)
 importFrom(methods,.hasSlot)
 importFrom(methods,show)
+importFrom(sf,st_crs)
 importFrom(sf,st_geometry)
 importFrom(sp,CRS)
 importFrom(sp,Line)
