fix id problem, build site

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ importFrom(dplyr,select_)
 importFrom(dplyr,tbl_df)
 importFrom(methods,.hasSlot)
 importFrom(methods,show)
+importFrom(sf,st_geometry)
 importFrom(sp,CRS)
 importFrom(sp,Line)
 importFrom(sp,Lines)
