feature_table now useable

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,7 @@
 
 S3method(feature_table,GEOMETRYCOLLECTION)
 S3method(feature_table,default)
-S3method(feature_table,sf)
+S3method(feature_table,sfc)
 S3method(map_table,Spatial)
 S3method(map_table,sf)
 S3method(map_table,trip)
@@ -30,7 +30,6 @@ importFrom(dplyr,select_)
 importFrom(dplyr,tbl_df)
 importFrom(methods,.hasSlot)
 importFrom(methods,show)
-importFrom(sf,st_geometry)
 importFrom(sp,CRS)
 importFrom(sp,Line)
 importFrom(sp,Lines)
