map_table basics for sf

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ S3method(sptable,SpatialLines)
 S3method(sptable,SpatialMultiPointsDataFrame)
 S3method(sptable,SpatialPointsDataFrame)
 S3method(sptable,SpatialPolygons)
+S3method(sptable,sf)
 export("sptable<-")
 export(feature_table)
 export(map_table)
@@ -30,6 +31,7 @@ importFrom(dplyr,select_)
 importFrom(dplyr,tbl_df)
 importFrom(methods,.hasSlot)
 importFrom(methods,show)
+importFrom(sf,st_geometry)
 importFrom(sp,CRS)
 importFrom(sp,Line)
 importFrom(sp,Lines)
