--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,12 @@
 # R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
 
-language: R
+language: r
 sudo: required
 cache: packages
+
+r:
+  - release
+  - devel
 
 # https://github.com/ropensci/rgbif/blob/master/.travis.yml#L9
 dist: trusty
