--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Description: Tools to convert from specific formats to more general forms of
     data provides flexibility, and the functions here deliberately 
     minimize the level of interpretation applied, leaving that for specific 
     applications. Includes support for simple features,  round-trip for 'Spatial' classes and long-form 
-    tables, analogous to 'ggplot2::fortify'. There is also a more "normal form" representation
+    tables, analogous to 'ggplot2::fortify'. There is also a more 'normal form' representation
     that decomposes simple features and their kin to tables of objects, parts, and unique coordinates. 
 Authors@R: c(person("Michael D.","Sumner", role = c("aut", "cre"), email = "mdsumner@gmail.com"))
 URL: https://mdsumner.github.io/spbabel
@@ -30,7 +30,6 @@ Suggests:
     knitr,
     covr, 
     broom, 
-    ggalt, 
     ggpolypath,
     maps, 
     trip, 
