--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,18 +14,22 @@ S3method(sptable,SpatialMultiPointsDataFrame)
 S3method(sptable,SpatialPointsDataFrame)
 S3method(sptable,SpatialPolygons)
 S3method(sptable,sf)
+S3method(xy_,BasicRaster)
+S3method(xy_,default)
 export("sptable<-")
 export(feature_table)
 export(map_table)
 export(sf)
 export(sp)
 export(sptable)
+export(xy_)
 exportMethods(print)
 exportMethods(show)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,distinct_)
 importFrom(dplyr,mutate)
+importFrom(dplyr,select)
 importFrom(dplyr,select_)
 importFrom(methods,.hasSlot)
 importFrom(methods,show)
