--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(map_table)
 export(sf)
 export(sp)
 export(sptable)
+export(xy_)
 exportMethods(print)
 exportMethods(show)
 importFrom(dplyr,"%>%")
