--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,9 +28,11 @@ exportMethods(show)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,distinct_)
+importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
 importFrom(dplyr,select)
 importFrom(dplyr,select_)
+importFrom(dplyr,summarize)
 importFrom(methods,.hasSlot)
 importFrom(methods,show)
 importFrom(sp,CRS)
