CRAN check fixes, deprecated map_table

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ importFrom(dplyr,mutate)
 importFrom(dplyr,select)
 importFrom(methods,.hasSlot)
 importFrom(methods,show)
+importFrom(rlang,.data)
 importFrom(rlang,syms)
 importFrom(sp,CRS)
 importFrom(sp,Line)
