--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,7 +1,6 @@
-pandoc: '2.5'
-pkgdown: 1.3.0
+pandoc: 2.7.3
+pkgdown: 1.4.1
 pkgdown_sha: ~
 articles:
-  sfbabel: sfbabel.html
   spbabel: spbabel.html
 
