--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: spbabel
 Type: Package
-Version: 0.5.5.9001
+Version: 0.6.0
 Title: Convert Spatial Data Using Tidy Tables
 Description: Tools to convert from specific formats to more general forms of 
     spatial data. Using tables to store the actual entities present in spatial
@@ -33,5 +33,6 @@ Suggests:
 VignetteBuilder: knitr
 LazyData: yes
 License: GPL-3
-RoxygenNote: 7.2.1
+RoxygenNote: 7.2.3
+Encoding: UTF-8
 ByteCompile: TRUE
